--- a/index.html
+++ b/index.html
@@ -3,206 +3,104 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Top Up BUSSID termurah dan terpercaya. Proses cepat dan aman. Cek harga dan cara pesan di sini.">
-  <meta name="keywords" content="top up bussid murah, top up bussid, top up bussid termurah, top up bussid cepat">
-  <title>Top Up BUSSID Murah</title>
+  <title>Top Up BUSSID Termurah & Terpercaya 2025</title>
+  <meta name="description" content="Cari top up BUSSID murah, cepat, dan terpercaya? Baca panduan lengkapnya di sini.">
+  <meta name="keywords" content="top up bussid murah, top up bussid terpercaya, bussid 2025, bussid termurah">
   <style>
     body {
       margin: 0;
-      font-family: 'Arial', sans-serif;
-      background: #e6f2ff;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f0f2f5;
       color: #333;
-      padding-bottom: 80px; /* biar promo ga nutup konten */
+      line-height: 1.6;
     }
-
     header {
-      background: #0077cc;
+      background: #008cff;
       color: #fff;
-      padding: 30px 20px;
+      padding: 1rem;
       text-align: center;
     }
-
-    header h1 {
-      margin: 0;
-      font-size: 32px;
+    nav {
+      background: #e0e0e0;
+      padding: 0.5rem;
+      text-align: center;
     }
-
-    header p {
-      margin-top: 5px;
-    }
-
-    main {
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    section {
-      background: #fff;
-      margin-bottom: 25px;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    h2 {
-      color: #0077cc;
-      margin-top: 0;
-    }
-
-    ul, ol {
-      padding-left: 20px;
-    }
-
-    .btn {
-      display: inline-block;
-      background: #28a745;
-      color: #fff;
-      padding: 10px 16px;
+    nav a {
+      color: #000;
+      margin: 0 10px;
       text-decoration: none;
-      border-radius: 6px;
-      margin-top: 15px;
-    }
-
-    .btn:hover {
-      background: #218838;
-    }
-
-    footer {
-      background: #0077cc;
-      color: white;
-      text-align: center;
-      padding: 15px 10px;
-      font-size: 14px;
-    }
-
-    .harga li {
-      margin-bottom: 8px;
-    }
-
-    /* PROMO NGAMBANG */
-    .promo-banner {
-      position: fixed;
-      bottom: 20px;
-      left: 0;
-      width: 100%;
-      overflow: hidden;
-      z-index: 9999;
-      pointer-events: none;
-    }
-
-    .promo-text {
-      display: inline-block;
-      white-space: nowrap;
-      background: rgba(255, 0, 0, 0.9);
-      color: white;
-      padding: 10px 30px;
-      border-radius: 10px;
       font-weight: bold;
-      box-shadow: 0 0 10px red;
-      animation: runningText 10s linear infinite;
     }
-
-    @keyframes runningText {
-      0% {
-        transform: translateX(100%);
-        opacity: 0;
-      }
-      10% {
-        opacity: 1;
-      }
-      90% {
-        opacity: 1;
-      }
-      100% {
-        transform: translateX(-100%);
-        opacity: 0;
-      }
+    .container {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #008cff;
+    }
+    ul {
+      background: #f9f9f9;
+      padding: 1rem;
+      border-radius: 8px;
+    }
+    ul li {
+      margin-bottom: 0.5rem;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-top: 1rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 14px;
+      color: #555;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Top Up BUSSID</h1>
-  <p>Top Up Cepat, Murah, Aman!</p>
-</header>
+  <header>
+    <h1>Top Up BUSSID Termurah & Terpercaya 2025</h1>
+  </header>
 
-<main>
+  <div class="container">
+    <p>
+      Lagi cari <strong>top up BUSSID</strong> yang murah, aman, dan cepat? Tenang bro, kamu datang ke tempat yang tepat!
+    </p>
 
-  <section>
-    <h2>Mau Duit Bussid Banyak, Tanpa Harus Cape cape narik?</h2>
-    <p>Top Up BUSSID solusinya dengan kalian top up bussid duit kalian bisa bertambah dengan instan, dan kalian juga ga perlu narik secara manual. <strong>Ayo Top up Ub Sekarang</strong>.</p>
-  </section>
-
-  <section>
-    <h2>🚌 Apa Itu Top Up BUSSID?</h2>
-    <p>Top Up BUSSID adalah layanan pembelian uang, untuk membeli berbagai macam item di game tersebut tanpa harus ngumpulin duit secara manual di <strong>Bus Simulator Indonesia</strong>.</p>
-  </section>
-
-  <section>
-    <h2>💸 Daftar Harga</h2>
-    <ul class="harga">
-      <li> 💵 70JT UB – Rp5.000</li>
-      <li>💵 200JT UB – Rp10.000</li>
-      <li>💵 250JT UB – Rp20.000</li>
-      <li>💵 300JT UB – Rp25.000</li>
-      <li>💵 500JT UB – Rp30.000</li>
-      <li>💵 700JT UB – Rp35.000</li>
-      <li>💵 900JT UB – Rp40.000</li>
-      <li>💵 1MIL UB – Rp45.000</li>
-      <li>💵 2 MIL UB – Rp50.000</li>
+    <h2>🔥 Kenapa Top Up di Sini?</h2>
+    <ul>
+      <li>💸 Harga mulai 1.000 aja!</li>
+      <li>⚡ Proses cepat cuma 1-5 menit</li>
+      <li>✅ Terbukti terpercaya, banyak testimoni</li>
+      <li>💳 Bisa bayar lewat Dana, OVO, Gopay</li>
     </ul>
-  </section>
 
-  <section>
-    <h2>📦 Cara Pemesanan</h2>
-    <ol>
-      <li>Hubungi admin via WhatsApp: <strong>6289520418604 / 6289630191806</strong>.</li>
-      <li>Pilih nominal top up sesuai daftar harga.</li>
-      <li>Lakukan pembayaran via DANA / OVO / GOPAY / Transfer Bank.</li>
-      <li>Proses dalam 1–5 menit setelah pembayaran!</li>
-    </ol>
-    <a href="https://wa.me/6289520418604" class="btn">Pesan Sekarang</a>
-  </section>
+    <h2>📌 Cara Pesan Gampang Banget</h2>
+    <p>
+      Tinggal buka halaman <a href="/order">Cara Order</a>, ikuti langkahnya, dan saldo kamu langsung masuk!
+    </p>
 
-  <section>
-    <h2>🌟 Testimoni Pembeli</h2>
-    <a href="https://whatsapp.com/channel/0029ValJCIE8KMqmgpnVTQ3o" class="btn" target="_blank">
-      Lihat Testimoni Pembeli
-    </a>
-  </section>
+    <h2>📷 Testimoni Pembeli</h2>
+    <img src="/img/testimoni1.jpg" alt="Testimoni Pembeli">
 
-</main>
+    <h2>🎯 Tips Tambahan</h2>
+    <p>
+      Gunakan akun BUSSID utama kamu saat top up biar saldo nggak nyasar. Simpan bukti pembayaran untuk jaga-jaga.
+    </p>
 
-<!-- PROMO JALAN -->
-<div class="promo-banner">
-  <div class="promo-text">
-    🎉 PROMO SPESIAL! TOP UP BUSSID MULAI 5K! BURUAN SEBELUM HABIS 🎉
+    <p><strong>Ayo buruan top up sekarang sebelum kehabisan promo!</strong></p>
   </div>
-</div>
 
-<footer>
-  &copy; 2025 Top Up BUSSID | All rights reserved
-</footer>
-
-<!-- SCRIPT SLIDER (kalau kamu punya gambar slider nanti) -->
-<script>
-  let posisi = 0;
-  function geserSlider(arah) {
-    const slider = document.getElementById('slider');
-    const gambar = slider.querySelectorAll('img');
-    const total = gambar.length;
-    const lebar = gambar[0].clientWidth + 10;
-
-    posisi += arah;
-
-    if (posisi < 0) posisi = total - 1;
-    if (posisi >= total) posisi = 0;
-
-    slider.style.transform = `translateX(-${posisi * lebar}px)`;
-  }
-</script>
+  <footer>
+    &copy; 2025 Top Up BUSSID | Semua hak dilindungi
+  </footer>
 
 </body>
 </html>
