--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Top Up BUSSID termurah dan terpercaya. Proses cepat dan aman. Cek harga dan cara pesan di sini.">
   <meta name="keywords" content="top up bussid murah, top up bussid, top up bussid termurah, top up bussid cepat">
-  <title>Top Up BUSSID Murah</title>
+  <title>Top up bussid murah</title>
   <style>
     body {
       margin: 0;
