--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="promo-banner">
   <div class="promo-text">
     🎉 Ayo Top Up Sekarang Sebelum Menyesal 🎉
-  </div>
+  </div> id="toast" style="position: fixed; bottom: 20px; right: 20px; background: #333; color: white; padding: 10px 15px; border-radius: 5px; display: none; z-index: 999;"></
 </div>
 <footer>
   &copy; 2025 Top Up BUSSID | All rights reserved
