--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <a href="https://wa.me/6289520418604" class="btn">Pesan Sekarang</a>
   </section>
   <section>
-    <<div id="promo-banner"></div>
+    <div id="promo-banner"></div>
 
 <style>
 #promo-banner {
