--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
   </section>
   <section>
     <div id="promo-banner"></div>
-
 <style>
 #promo-banner {
   background: #00c853;
@@ -101,16 +100,6 @@
 </style>
 
 <script>
-const promos = [
-  "🔥 Top up :  Mulai 5K!",
-  "🚀 Proses Cepat & Aman 24 Jam!"
-];
-
-let i = 0;
-setInterval(() => {
-  document.getElementById("promo-banner").innerText = promos[i];
-  i = (i + 1) % promos.length;
-}, 3000);
 </script>
   </section>
   <section>
@@ -125,9 +114,9 @@ setInterval(() => {
 <div class="promo-banner">
   <div class="promo-text">
     🎉 Ayo Top Up Sekarang Sebelum Menyesal 🎉
-  </div>
-<!-- Notifikasi toast -->
-<div id="toast"></div>
+ 
+<div id="promo-top" class="promo-top-banner">tes</div>
+
 
 <footer>
   &copy; 2025 Top Up BUSSID | All rights reserved
