--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -6,9 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Top Up BUSSID termurah dan terpercaya. Proses cepat dan aman. Cek harga dan cara pesan di sini.">
   <meta name="keywords" content="top up bussid murah, top up bussid, top up bussid termurah, top up bussid cepat">
-  <title>Top up bussid murah</title>
-  <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.5.2/firebase-firestore.js"></script>
+  <title>Top up BUSSID murah</title>
   <style>
     body {
       margin: 0;
@@ -29,155 +28,240 @@
     section { background: #fff; margin-bottom: 25px; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
     h2 { color: #0077cc; margin-top: 0; }
     ul, ol { padding-left: 20px; }
-    .btn { display: inline-block; background: #28a745; color: #fff; padding: 10px 16px; text-decoration: none; border-radius: 6px; margin-top: 15px; }
+    .btn {
+      display: inline-block;
+      background: #28a745;
+      color: #fff;
+      padding: 10px 16px;
+      text-decoration: none;
+      border-radius: 6px;
+      margin-top: 15px;
+    }
     .btn:hover { background: #218838; }
-    footer { background: #0077cc; color: white; text-align: center; padding: 15px 10px; font-size: 14px; }
+    footer {
+      background: #0077cc;
+      color: white;
+      text-align: center;
+      padding: 15px 10px;
+      font-size: 14px;
+    }
     .harga li { margin-bottom: 8px; }
-    .promo-banner { position: fixed; bottom: 20px; left: 0; width: 100%; overflow: hidden; z-index: 9998; pointer-events: none; }
-    .promo-text { display: inline-block; white-space: nowrap; background: rgba(255, 0, 0, 0.9); color: white; padding: 10px 30px; border-radius: 10px; font-weight: bold; box-shadow: 0 0 10px red; animation: runningText 10s linear infinite; }
-    #toast {
+
+    .promo-banner {
       position: fixed;
       bottom: 20px;
-      right: 20px;
-      background: #333;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 5px;
-      display: none;
+      left: 0;
+      width: 100%;
+      overflow: hidden;
       z-index: 9999;
+      pointer-events: none;
     }
+
+    .promo-text {
+      display: inline-block;
+      white-space: nowrap;
+      background: rgba(255, 0, 0, 0.9);
+      color: white;
+      padding: 10px 30px;
+      border-radius: 10px;
+      font-weight: bold;
+      box-shadow: 0 0 10px red;
+      animation: runningText 10s linear infinite;
+    }
+
     @keyframes runningText {
       0% { transform: translateX(100%); opacity: 0; }
       10% { opacity: 1; }
       90% { opacity: 1; }
       100% { transform: translateX(-100%); opacity: 0; }
     }
+
+    #promo {
+      position: fixed;
+      top: -100px;
+      left: 0;
+      right: 0;
+      background: #ff5252;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-weight: bold;
+      transition: top 0.5s ease;
+      z-index: 999;
+    }
+
+    #promo.active {
+      top: 0;
+    }
+
+    #toggleButton {
+      display: none;
+      position: fixed;
+      top: 120px;
+      right: 20px;
+      background: #333;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      z-index: 999;
+    }
   </style>
 </head>
 <body>
-<header>
-  <h1>Top Up BUSSID</h1>
-  <p>Top Up Cepat, Murah, Aman!</p>
-</header>
-<main>
-  <section>
-    <h2>Mau Duit Bussid Banyak, Tanpa Harus Cape cape narik?</h2>
-    <p>Top Up BUSSID solusinya dengan kalian top up bussid duit kalian bisa bertambah dengan instan, dan kalian juga ga perlu narik secara manual. <strong>Ayo Top up Ub Sekarang</strong>.</p>
-  </section>
-  <section>
-    <h2>🚌 Apa Itu Top Up BUSSID?</h2>
-    <p>Top Up BUSSID adalah layanan pembelian uang, untuk membeli berbagai macam item di game tersebut tanpa harus ngumpulin duit secara manual di <strong>Bus Simulator Indonesia</strong>.</p>
-  </section>
-  <section>
-    <h2>💸 Daftar Harga</h2>
-    <ul class="harga" id="daftar-harga"><li>Memuat daftar harga...</li></ul>
-  </section>
-  <section>
-    <h2>📦 Cara Pemesanan</h2>
-    <ol>
-      <li>Hubungi admin via WhatsApp: <strong>6289520418604 / 6289630191806</strong>.</li>
-      <li>Pilih nominal top up sesuai daftar harga.</li>
-      <li>Lakukan pembayaran via DANA / OVO / GOPAY / Transfer Bank.</li>
-      <li>Proses dalam 1–5 menit setelah pembayaran!</li>
-    </ol>
-    <a href="https://wa.me/6289520418604" class="btn">Pesan Sekarang</a>
-  </section>
-  <section>
-    <div id="promo-banner"></div>
-<style>
-#promo-banner {
-  background: #00c853;
-  color: white;
-  padding: 12px;
-  text-align: center;
-  font-weight: bold;
-  animation: fade 1s;
-}
-@keyframes fade {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-</style>
+  <header>
+    <h1>Top Up BUSSID</h1>
+    <p>Top Up Cepat, Murah, Aman!</p>
+  </header>
 
-<script>
-</script>
-  </section>
-  <section>
-    <h2>🌟 Testimoni Pembeli</h2>
-    <a href="https://whatsapp.com/channel/0029ValJCIE8KMqmgpnVTQ3o" class="btn" target="_blank">
-      Lihat Testimoni Pembeli
-    </a>
-  </section>
-</main>
+  <main>
+    <section>
+      <h2>Mau Duit Bussid Banyak, Tanpa Harus Cape cape narik?</h2>
+      <p>Top Up BUSSID solusinya dengan kalian top up bussid duit kalian bisa bertambah dengan instan, dan kalian juga ga perlu narik secara manual. <strong>Ayo Top up Ub Sekarang</strong>.</p>
+    </section>
 
-<!-- Promo running text -->
-<div class="promo-banner">
-  <div class="promo-text">
-    🎉 Ayo Top Up Sekarang Sebelum Menyesal 🎉
- 
-<div id="promo-top" class="promo-top-banner">tes</div>
+    <section>
+      <h2>🚌 Apa Itu Top Up BUSSID?</h2>
+      <p>Top Up BUSSID adalah layanan pembelian uang, untuk membeli berbagai macam item di game tersebut tanpa harus ngumpulin duit secara manual di <strong>Bus Simulator Indonesia</strong>.</p>
+    </section>
 
+    <section>
+      <h2>💸 Daftar Harga</h2>
+      <ul class="harga">
+        <li><span>💵 70JT UB</span> – <strong>Rp5.000</strong></li>
+        <li><span>💵 200JT UB</span> – <strong>Rp10.000</strong></li>
+        <li><span>💵 250JT UB</span> – <strong>Rp20.000</strong></li>
+        <li><span>💵 300JT UB</span> – <strong>Rp25.000</strong></li>
+        <li><span>💵 500JT UB</span> – <strong>Rp30.000</strong></li>
+        <li><span>💵 700JT UB</span> – <strong>Rp35.000</strong></li>
+        <li><span>💵 900JT UB</span> – <strong>Rp40.000</strong></li>
+        <li><span>💵 1MIL UB</span> – <strong>Rp45.000</strong></li>
+        <li><span>💵 2 MIL UB</span> – <strong>Rp50.000</strong></li>
+      </ul>
+    </section>
 
-<footer>
-  &copy; 2025 Top Up BUSSID | All rights reserved
-</footer>
+    <section>
+      <h2>📦 Cara Pemesanan</h2>
+      <ol>
+        <li>Hubungi admin via WhatsApp: <strong>6289520418604 / 6289630191806</strong>.</li>
+        <li>Pilih nominal top up sesuai daftar harga.</li>
+        <li>Lakukan pembayaran via DANA / OVO / GOPAY / Transfer Bank.</li>
+        <li>Proses dalam 1–5 menit setelah pembayaran!</li>
+      </ol>
+      <a href="https://wa.me/6289520418604" class="btn">Pesan Sekarang</a>
+    </section>
 
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyBd2z5p0G93InmRC_RFEhV2WfcAqYE9V_k",
-    authDomain: "paneladmin-83c8a.firebaseapp.com",
-    projectId: "paneladmin-83c8a",
-    storageBucket: "paneladmin-83c8a.firebasestorage.app",
-    messagingSenderId: "343729471216",
-    appId: "1:343729471216:web:14c357375fa83083c44c35",
-    measurementId: "G-E2G04E4KB5"
-  };
+    <section>
+      <h2>🌟 Testimoni Pembeli</h2>
+      <a href="https://whatsapp.com/channel/0029ValJCIE8KMqmgpnVTQ3o" class="btn" target="_blank">Lihat Testimoni Pembeli</a>
+    </section>
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
+    <!-- PANEL ADMIN MAINTENANCE -->
+    <section id="adminPanel" style="display:none;">
+      <h2>⚙️ Panel Admin - Maintenance</h2>
+      <p id="maintenanceStatus">Status maintenance akan muncul di sini...</p>
+      <input type="text" id="maintenanceInput" placeholder="Ketik true / false">
+      <button class="btn" onclick="updateMaintenance()">Update Maintenance</button>
+    </section>
+  </main>
 
-  // 🔄 Real-time daftar harga
-  db.collection("harga").onSnapshot((querySnapshot) => {
-    const hargaEl = document.getElementById("daftar-harga");
-    hargaEl.innerHTML = "";
-    if (querySnapshot.empty) {
-      hargaEl.innerHTML = "<li>Belum ada data harga.</li>";
-    } else {
-      querySnapshot.forEach((doc) => {
-        const data = doc.data();
-        hargaEl.innerHTML += '<li>💵 ' + data.nama + ' – Rp' + data.harga + '</li>';
-      });
+  <div class="promo-banner" id="promoBanner">
+    <div class="promo-text">🎉 Ayo Top Up Sekarang Sebelum Menyesal 🎉</div>
+  </div>
+
+  <div id="promo">🔥 Promo Spesial Hari Ini! 🔥</div>
+  <button id="toggleButton" onclick="togglePromo()">On/Off Promo</button>
+
+  <footer>
+    &copy; 2025 Top Up BUSSID | All rights reserved
+  </footer>
+
+  <script>
+    const IP_ADMIN = "103.247.23.107"; // Ganti dengan IP kamu
+
+    function togglePromo() {
+      const promo = document.getElementById("promo");
+      const banner = document.getElementById("promoBanner");
+      promo.classList.toggle("active");
+      banner.style.display = banner.style.display === "none" ? "block" : "none";
     }
-  }, (error) => {
-    showToast("❌ Gagal memuat harga");
-    console.error("Error harga:", error);
-  });
 
-  // 🔄 Real-time promo spesial
-  db.collection("promo").onSnapshot((querySnapshot) => {
-    const promoEl = document.getElementById("daftar-promo");
-    promoEl.innerHTML = "";
-    if (querySnapshot.empty) {
-      promoEl.innerHTML = "<p>Tidak ada promo saat ini.</p>";
-    } else {
-      querySnapshot.forEach((doc) => {
-        const data = doc.data();
-        promoEl.innerHTML += "<p><strong>" + data.judul + "</strong>: " + data.deskripsi + "</p>";
-      });
+    function showAdminTools() {
+      document.getElementById("toggleButton").style.display = "block";
+      document.getElementById("adminPanel").style.display = "block";
     }
-  }, (error) => {
-    showToast("❌ Gagal memuat promo");
-    console.error("Error promo:", error);
-  });
 
-  function showToast(message) {
-    const toast = document.getElementById("toast");
-    toast.innerText = message;
-    toast.style.display = "block";
-    setTimeout(() => {
-      toast.style.display = "none";
-    }, 3000);
-  }
-</script>
+    window.addEventListener("load", () => {
+      const params = new URLSearchParams(window.location.search);
+      const today = new Date().getDay(); // 5 = Jumat
+
+      const promo = document.getElementById("promo");
+      const banner = document.getElementById("promoBanner");
+      if (today === 5) {
+        promo.classList.add("active");
+        banner.style.display = "block";
+      } else {
+        promo.classList.remove("active");
+        banner.style.display = "none";
+      }
+
+      fetch("https://api.ipify.org?format=json")
+        .then(res => res.json())
+        .then(data => {
+          if (data.ip === IP_ADMIN || params.get("admin") === "true") {
+            showAdminTools();
+          }
+        })
+        .catch(() => {
+          if (params.get("admin") === "true") {
+            showAdminTools();
+          }
+        });
+    });
+  </script>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBd2z5p0G93InmRC_RFEhV2WfcAqYE9V_k",
+      authDomain: "paneladmin-83c8a.firebaseapp.com",
+      databaseURL: "https://paneladmin-83c8a-default-rtdb.firebaseio.com",
+      projectId: "paneladmin-83c8a",
+      storageBucket: "paneladmin-83c8a.appspot.com",
+      messagingSenderId: "343729471216",
+      appId: "1:343729471216:web:14c357375fa83083c44c35",
+      measurementId: "G-E2G04E4KB5"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const maintenanceRef = ref(db, "maintenance");
+
+    const statusText = document.getElementById("maintenanceStatus");
+
+    onValue(maintenanceRef, (snapshot) => {
+      const aktif = snapshot.val();
+      const isAdmin = new URLSearchParams(window.location.search).get("admin") === "true";
+      statusText.textContent = aktif ? "🔧 Maintenance: AKTIF" : "✅ Maintenance: NONAKTIF";
+
+      if (aktif && !isAdmin) {
+        window.location.href = "maintenance.html";
+      }
+    });
+
+    window.updateMaintenance = function () {
+      const input = document.getElementById("maintenanceInput").value.trim().toLowerCase();
+      if (input === "true" || input === "false") {
+        set(maintenanceRef, input === "true")
+          .then(() => alert("Maintenance berhasil diubah ke " + input.toUpperCase()))
+          .catch(err => alert("Gagal update: " + err.message));
+      } else {
+        alert("Masukkan hanya: true atau false");
+      }
+    };
+  </script>
 </body>
 </html>
