--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -55,6 +54,7 @@
       overflow: hidden;
       z-index: 9999;
       pointer-events: none;
+      display: none;
     }
 
     .promo-text {
@@ -77,8 +77,9 @@
     }
 
     #promo {
+      display: none;
       position: fixed;
-      top: -100px;
+      top: 0;
       left: 0;
       right: 0;
       background: #ff5252;
@@ -86,25 +87,6 @@
       text-align: center;
       padding: 20px;
       font-weight: bold;
-      transition: top 0.5s ease;
-      z-index: 999;
-    }
-
-    #promo.active {
-      top: 0;
-    }
-
-    #toggleButton {
-      display: none;
-      position: fixed;
-      top: 120px;
-      right: 20px;
-      background: #333;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
       z-index: 999;
     }
   </style>
@@ -167,59 +149,14 @@
   </main>
 
   <div class="promo-banner" id="promoBanner">
-    <div class="promo-text">🎉 Ayo Top Up Sekarang Sebelum Menyesal 🎉</div>
+    <div class="promo-text" id="promoText">🎉 Promo Spesial! 🎉</div>
   </div>
 
   <div id="promo">🔥 Promo Spesial Hari Ini! 🔥</div>
-  <button id="toggleButton" onclick="togglePromo()">On/Off Promo</button>
 
   <footer>
     &copy; 2025 Top Up BUSSID | All rights reserved
   </footer>
-
-  <script>
-    const IP_ADMIN = "103.247.23.107"; // Ganti dengan IP kamu
-
-    function togglePromo() {
-      const promo = document.getElementById("promo");
-      const banner = document.getElementById("promoBanner");
-      promo.classList.toggle("active");
-      banner.style.display = banner.style.display === "none" ? "block" : "none";
-    }
-
-    function showAdminTools() {
-      document.getElementById("toggleButton").style.display = "block";
-      document.getElementById("adminPanel").style.display = "block";
-    }
-
-    window.addEventListener("load", () => {
-      const params = new URLSearchParams(window.location.search);
-      const today = new Date().getDay(); // 5 = Jumat
-
-      const promo = document.getElementById("promo");
-      const banner = document.getElementById("promoBanner");
-      if (today === 5) {
-        promo.classList.add("active");
-        banner.style.display = "block";
-      } else {
-        promo.classList.remove("active");
-        banner.style.display = "none";
-      }
-
-      fetch("https://api.ipify.org?format=json")
-        .then(res => res.json())
-        .then(data => {
-          if (data.ip === IP_ADMIN || params.get("admin") === "true") {
-            showAdminTools();
-          }
-        })
-        .catch(() => {
-          if (params.get("admin") === "true") {
-            showAdminTools();
-          }
-        });
-    });
-  </script>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
@@ -238,15 +175,17 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
-    const maintenanceRef = ref(db, "maintenance");
 
+    const maintenanceRef = ref(db, "maintenance");
+    const promoRef = ref(db, "promo");
+
+    // Maintenance Check
     const statusText = document.getElementById("maintenanceStatus");
+    const isAdmin = new URLSearchParams(window.location.search).get("admin") === "true";
 
     onValue(maintenanceRef, (snapshot) => {
       const aktif = snapshot.val();
-      const isAdmin = new URLSearchParams(window.location.search).get("admin") === "true";
       statusText.textContent = aktif ? "🔧 Maintenance: AKTIF" : "✅ Maintenance: NONAKTIF";
-
       if (aktif && !isAdmin) {
         window.location.href = "maintenance.html";
       }
@@ -262,6 +201,29 @@
         alert("Masukkan hanya: true atau false");
       }
     };
+
+    // Promo Firebase
+    const promoBar = document.getElementById("promo");
+    const promoBanner = document.getElementById("promoBanner");
+    const promoText = document.getElementById("promoText");
+
+    onValue(promoRef, (snapshot) => {
+      const data = snapshot.val();
+      if (data && data.aktif && data.teks) {
+        promoBar.style.display = "block";
+        promoBanner.style.display = "block";
+        promoBar.textContent = data.teks;
+        promoText.textContent = data.teks;
+      } else {
+        promoBar.style.display = "none";
+        promoBanner.style.display = "none";
+      }
+    });
+
+    // Tampilkan panel admin kalau admin=true
+    if (isAdmin) {
+      document.getElementById("adminPanel").style.display = "block";
+    }
   </script>
 </body>
 </html>
