--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta name="google-site-verification" content="QtsnZP-acof6tTL5ogitFQ9r5kPr6kuNEB4b0SjOHCM" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Top Up BUSSID termurah dan terpercaya. Proses cepat dan aman. Cek harga dan cara pesan di sini.">
-  <meta name="keywords" content="top up bussid murah, top up bussid, top up bussid termurah, top up bussid cepat">
-  <title>Top up BUSSID murah</title>
+  <meta name="description" content=" Jasa Top Up BUSSID termurah dan terpercaya. Proses cepat dan aman. Cek harga dan cara pesan di sini.">
+  <meta name="keywords" content=" Jasa top up bussid murah, top up bussid, top up bussid termurah, top up bussid cepat">
+  <title>Jasa Top up BUSSID murah Aman dan Terpercaya</title>
   <style>
     body {
       margin: 0;
